--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "proxy": "http://localhost:5000",
   "scripts": {
     "start": "expo start",
@@ -9,16 +9,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "expo": "^35.0.0",
+    "axios": "^0.21.4",
+    "expo": "^42.0.3",
+    "expo-auth-session": "^3.3.1",
+    "expo-random": "^11.2.0",
+    "expo-web-browser": "^9.2.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-native": "0.59",
-    "react-native-web": "^0.11.7",
+    "react-native": "^0.65.1",
+    "react-native-web": "^0.17.1",
     "react-native-webview": "7.0.5",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.14",
     "babel-preset-expo": "^7.1.0"
   },
   "private": true
