--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "react-dom": "16.8.3",
     "react-native": "^0.65.1",
     "react-native-web": "^0.17.1",
-    "react-native-webview": "7.0.5",
+    "react-native-webview": "^11.13.0",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.14",
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^7.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.26.0"
   },
   "private": true
 }
