--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.0"
+    "eslint-plugin-react": "^7.26.0",
+    "prettier": "2.4.1"
   },
   "private": true
 }
