--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "^0.65.1",
     "react-native-web": "^0.17.1",
     "react-native-webview": "^11.13.0",
+    "react-query": "^3.24.4",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
