--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-auth-session": "^3.3.1",
     "expo-random": "^11.2.0",
     "expo-web-browser": "^9.2.0",
+    "lodash": "^4.17.21",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "^0.65.1",
