--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "expo": "^42.0.3",
     "expo-auth-session": "^3.3.1",
+    "expo-cli": "^4.12.0",
     "expo-random": "^11.2.0",
     "expo-web-browser": "^9.2.0",
     "lodash": "^4.17.21",
