--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
     "expo": "^42.0.3",
     "expo-auth-session": "^3.3.1",
     "expo-random": "^11.2.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.26.0",
+    "expo-cli": "^4.12.0",
     "gh-pages": "^3.2.3",
     "prettier": "2.4.1"
   },
